packages/webapp/src/components/Navigation/SideMenu/styles.module.scss
/* ... */
.menuToggle {
  border: 1px solid #d1e9d9;
  padding: 4px;
  position: fixed;
  top: calc(var(--global-navbar-height) / 2 - 12px);
  left: calc(var(--global-side-menu-width) - 14px);
  background-color: white;
  z-index: 1300;
  transition: transform 0.5s;
  animation: toggle-initial 0.9s forwards, toggle-color-initial 2s;

  svg {
    height: 16px;
    width: 16px;
  }

  &:hover {
    background-color: var(--green500);

    svg {
      path {
        stroke: var(--green800);
      }
    }
  }

  &.compactMenuToggle {
    transform: rotate(-180deg);
    left: calc(var(--global-compact-side-menu-width) - 13px);
    animation-name: toggle-collapse;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
  }

  &.expandedMenuToggle {
    animation-name: toggle-expand;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
  }
}

.popoverMenu {
  padding-top: 0px;
  padding-bottom: 0px;
}

